bobcat (2.04.02)    ISN

  * DateTime: DST updated by setXXX() members as well.

bobcat (2.04.01)

  * Some OpenSSL functions (HMAC, Digest) needed unsigned 'int *'s. They got
'size_t *s' causing problems on 64-bit archs (e.g. amd64). Now fixed.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 04 Sep 2009 23:48:22 +0200

bobcat (2.04.00)

  * BigInt has been enhanced and extended. Many members have received new 
    prototypes.
  * New Class: OHexStreambuf, streambuf derived class writing characters
    received by it as hex numbers to a specified std::ostream.
  * New Class: DigestBuf, streambuf derived class computing various types of
    message digests of the characters received by it.
  * New Class: HMacBuf, streambuf derived class computing a HMAC hashvalue 
    of the characters received by it.
  * New Class: EncryptBuf, streambuf derived class encrypting the characters
    received by it, writing the encrypted information to a specified
    std::ostream. 
  * New Class: DecryptBuf, streambuf derived class decrypting the encrypted
    information received by it, writing the decrypted information to a
    specified std::ostream. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 02 Sep 2009 20:41:06 +0200

bobcat (2.03.00)

  * Bobcat is compiled by g++ --std=c++0x.
  * Stat::modeStr() bug repaired due to which it always showed rwxrwxrwx
  * Removed deprecated getPid() member from Fork
  * Removed deprecated get...Fd() members from Pipe
  * Removed deprecated get...Fd() members from Selector
  * Selector's setAlarm() member performs a validity check on the specified 
    alarm time 
  * Selector's wait() member handles no-alarm specifications correctly (i.e., 
    according to the description in the select(2) man-page.
  * Redirector has a new member: through()
  * IFdStreambuf::xsgetn() was reimplemented to allow unformated reads from 
    std::istream (and IFdStream) objects without referring to underflow.