@@ -56,8 +56,8 @@ initialization vector to use. The tt(iv)'s length cannot be zero. When using
 ECB modes no initialization vector is used. In those cases any non-empty
 initialization vector may be provided.
 
-    The constructor throws an tt(FBB::Errno) exception if either an unknown
-encryption method or empty initialization vector was specified.
+    The constructor throws an tt(FBB::Errno) exception if an unknown
+encryption method was specified.
 
     The constructor's first parameter refers to the tt(std::ostream) to
 receive the decrypted information.
