@@ -77,94 +77,95 @@ ciphers; other methods are block ciphers:
     table(5)(lllll)(
     rowline()
     row(cell(method)cell(keysize)cell(blocksize)cell(mode)cell(identifier))
-    row(cell()cell((bits))cell((bits)))
+    row(cell()cell((bytes))cell((bytes)))
 rowline()
-    ROW(AES)     (128) (64)(CBC)(aes-128-cbc)
+    ROW(AES)     (16) (8)(CBC)(aes-128-cbc)
     ROW()         (  ) (  )(EBC)(aes-128-ecb)
     ROW()         (  ) (  )(CFB)(aes-128-cfb)
     ROW()         (  ) (  )(OFB)(aes-128-ofb)
-    ROW()         (192) (192)(CBC)(aes-192-cbc)
+    ROW()         (24) (24)(CBC)(aes-192-cbc)
     ROW()         (  ) (  )(EBC)(aes-192-ecb)
     ROW()         (  ) (  )(CFB)(aes-192-cfb)
     ROW()         (  ) (  )(OFB)(aes-192-ofb)
-    ROW()         (256) (256)(CBC)(aes-256-cbc)
+    ROW()         (32) (32)(CBC)(aes-256-cbc)
     ROW()         (  ) (  )(EBC)(aes-256-ecb)
     ROW()         (  ) (  )(CFB)(aes-256-cfb)
     ROW()         (  ) (  )(OFB)(aes-256-ofb)
 rowline()
-    ROW(BLOWFISH)(128) (64)(CBC)(bf-cbc)
+    ROW(BLOWFISH)(16) (8)(CBC)(bf-cbc)
     ROW()         (  ) (  )(EBC)(bf-ecb)
     ROW()         (  ) (  )(CFB)(bf-cfb)
     ROW()         (  ) (  )(OFB)(bf-ofb)
-    row(setmanalign(lssss)cell(max key length is 448 bits, 128 generally used))
+    row(setmanalign(lssss)cell(max key length is 56 bytes, 16 generally used))
 rowline()
-    ROW(CAMELLIA) (128) (128)(CBC)(camellia-128-cbc)
+    ROW(CAMELLIA) (16) (16)(CBC)(camellia-128-cbc)
     ROW()         (  ) (  )(EBC)  (camellia-128-ecb)
     ROW()         (  ) (  )(CFB)  (camellia-128-cfb)
     ROW()         (  ) (  )(OFB)  (camellia-128-ofb)
-    ROW()         (192) ()(CBC)   (camellia-192-cbc)
+    ROW()         (24) ()(CBC)   (camellia-192-cbc)
     ROW()         (  ) (  )(EBC)  (camellia-192-ecb)
     ROW()         (  ) (  )(CFB)  (camellia-192-cfb)
     ROW()         (  ) (  )(OFB)  (camellia-192-ofb)
-    ROW()         (256) ()(CBC)   (camellia-256-cbc)
+    ROW()         (32) ()(CBC)   (camellia-256-cbc)
     ROW()         (  ) (  )(EBC)  (camellia-256-ecb)
     ROW()         (  ) (  )(CFB)  (camellia-256-cfb)
     ROW()         (  ) (  )(OFB)  (camellia-256-ofb)
 rowline()
-    ROW(CAST)(128)     (64)(CBC)(cast-cbc)
+    ROW(CAST)(16)     (8)(CBC)(cast-cbc)
     ROW()         (  ) (  )(EBC)(cast-ecb)
     ROW()         (  ) (  )(CFB)(cast-cfb)
     ROW()         (  ) (  )(OFB)(cast-ofb)
     row(setmanalign(lssss)
-            cell(min key length is 40 bits, max is shown; keys must be))
-    row(setmanalign(lssss)cell(multiples of 8 bits))
+            cell(min key length is 5 bytes, max is shown))
 rowline()
-    ROW(DES)(64)(64)(CBC)(des-cbc)
+    ROW(DES)(8)(8)(CBC)(des-cbc)
     ROW()   (  )(  )(EBC)(des-ebc)
     ROW()   (  )(  )(CFB)(des-cfb)
     ROW()   (  )(  )(OFB)(des-ofb)
 rowline()
-    ROW(DESX)(64)(64)(CBC)(desx-cbc)
+    ROW(DESX)(8)(8)(CBC)(desx-cbc)
 rowline()
-    ROW(3DES)(128)(64)(CBC)(des-ede-cbc)
+    ROW(3DES)(16)(8)(CBC)(des-ede-cbc)
     ROW()    (  ) (  )(EBC)(des-ede)
     ROW()    (  ) (  )(CFB)(des-ede-cfb)
     ROW()    (  ) (  )(OFB)(des-ede-ofb)
 rowline()
-    ROW(3DES)(192)(64)(CBC)(des-ede3-cbc)
+    ROW(3DES)(24)(8)(CBC)(des-ede3-cbc)
     ROW()    (  ) (  )(EBC)(des-ede3)
     ROW()    (  ) (  )(CFB)(des-ede3-cfb)
     ROW()    (  ) (  )(OFB)(des-ede3-ofb)
     row(setmanalign(lssss)
-        cell(Key bits 65-128 define the 2nd key, bits 129-192))
+        cell(Key bytes 9-16 define the 2nd key, bytes 17-24))
     row(setmanalign(lssss)cell(define the 3rd key))
 rowline()
-    ROW(RC2) (128)(64)(CBC)(rc2-cbc)
+    ROW(RC2) (16)(8)(CBC)(rc2-cbc)
     ROW()    (  ) (  )(EBC)(rc2-ecb)
     ROW()    (  ) (  )(CFB)(rc2-cfb)
     ROW()    (  ) (  )(OFB)(rc2-ofb)
     row(setmanalign(lssss)\
-        cell(Key length variable, max. 1024 bits, default length is shown))
+        cell(Key length variable, max. 128 bytes, default length is shown))
 rowline()
-    ROW(RC2-40)(40)(64)()(rc2-40-cbc)
+    ROW(RC2-40)(5)(8)()(rc2-40-cbc)
     row(setmanalign(lssss)cell(obsolete: avoid))
 rowline()
-    ROW(RC2-64)(64)(64)()(rc2-64-cbc)
+    ROW(RC2-64)(8)(8)()(rc2-64-cbc)
     row(setmanalign(lssss)cell(obsolete: avoid))
 rowline()
-    ROW(RC4)(128)(N.A.)()(rc4)
+    ROW(RC4)(16)(N.A.)()(rc4)
     row(setmanalign(lssss)\
-        cell(Key length is variable, max. 256 bits. default length is shown))
+        cell(Key length is variable, max. 256 bytes. default length is shown))
+    row(setmanalign(lssss)
+        cell(Encrypt again to decrypt. Don't use tt(DecryptBuf))) 
 rowline()
-    ROW(RC4-40)(40)(N.A.)()(rc4-40)
+    ROW(RC4-40)(5)(N.A.)()(rc4-40)
     row(setmanalign(lssss)cell(obsolete: avoid))
 rowline()
-    ROW(RC5) (128)(64) (CBC)(rc5-cbc)
+    ROW(RC5) (16)(8) (CBC)(rc5-cbc)
     ROW()    (  ) (  ) (EBC)(rc5-ecb)
     ROW()    (  ) (  ) (CFB)(rc5-cfb)
     ROW()    (  ) (  ) (OFB)(rc5-ofb)
     row(setmanalign(lssss)
-        cell(Key length variable, max. 2040 bits, rounds 8, 12 or 16,))
+        cell(Key length variable, max. 256 bytes, rounds 8, 12 or 16,))
     row(setmanalign(lssss)
         cell(default # rounds is 12))
 rowline()
@@ -183,7 +184,7 @@ manpagesection(CONSTRUCTOR)
         This constructor initializes the tt(EncryptBuf) object preparing it
 for the message encrypt algorithm specified with tt(type). The encryption
 algorithms that can be used are listed in the table found in the
-bf(DESCRIPTION) section. E.g., to use the AES method on 192 bit keys and
+bf(DESCRIPTION) section. E.g., to use the AES method on 24 bit keys and
 blocks in CBC mode specify tt("aes-192-cbc"). The tt(key) parameter refers to
 the key to be used, the tt(iv) parameter refers to the initialization vector
 to use. Both tt(key) and tt(iv) may contain non-displayable characters. When
@@ -235,14 +236,13 @@ rounds or 0 if the member is called for another encryption method than RC5.
         This member can be used to specify the initialization vector to use
 after construction time but before any data has been encrypted. When called
 after encryption has started an tt(FBB::Errno) exception will be thrown.
-    itb(void setKey(std::string const &key, size_t numberOfBits = 0))
+    itb(void setKey(std::string const &key, size_t numberOfBytes = 0))
         This member can be used to specify the key and its length after
 construction time but before any data has been encrypted. When called after
 encryption has started an tt(FBB::Errno) exception will be thrown. The size of
-the key is assumed to be the number of bits in the key's data (i.e., tt(8 *
-key.length())). If another key length is required the member function's second
-parameter can be used to specify the length of the key em(in bits) (note: not
-in bytes). 
+the key is assumed to be the number of bytes in the key's data. If another key
+length is required the member function's second parameter can be used to
+specify the length of the key em(in bytes).
     itb(bool setRounds(size_t nRounds))
         This member can only be used with the RC5 encryption method to set the
 number of rounds of the algorithm to 8, 12 or 16. When the number of rounds
