@@ -1,6 +1,9 @@
 bobcat (2.04.02)    ISN
 
   * DateTime: DST updated by setXXX() members as well.
+  * EncryptBuf/DecryptBuf keylength setting modified, EncryptBuf's manpage
+    shows key/block sizes in bytes, requirement of non-empty IV vector for
+    DecryptBuf dropped
 
 bobcat (2.04.01)
 
